# Course_work_3

./: .coverage  README.md  pyproject.toml
main_code/: class_.py  main.py  sum_def.py
tests/: test_main.py
