[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Михаил <misga.yats@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
virtualenv = "^20.17.1"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

